--- a/PdpB27_Darslar/PdpB27_Darslar.csproj
+++ b/PdpB27_Darslar/PdpB27_Darslar.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Collections\StaticFiles\" />
+  </ItemGroup>
+
 </Project>
