added working with files

--- a/3-Modul/3-Modul.csproj
+++ b/3-Modul/3-Modul.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DateTime_4_lesson\" />
+    <Folder Include="Files_Directories_5_lesson\MyFolder\" />
+  </ItemGroup>
+
 </Project>
