--- a/3-Modul/3-Modul.csproj
+++ b/3-Modul/3-Modul.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Files_Directories_5_lesson\MyFolder\SubFolderA\TestFolder\" />
+    <Folder Include="Person\" />
   </ItemGroup>
 
 </Project>
