--- a/3-Modul/3-Modul.csproj
+++ b/3-Modul/3-Modul.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Person\" />
   </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    </ItemGroup>
+
 </Project>
